# fastapi-cdn-host

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  README.zh-hans.md  README.zh.md  justfile  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  pre-commit.yml  publish.yml
examples/: main.py
examples/normal/: main.py  test_main.py
examples/offline/: main.py  test_main.py
examples/offline/static/: redoc.standalone.js  swagger-ui-bundle.js  swagger-ui.css
fastapi_cdn_host/: __init__.py  _types.py  cli.py  client.py  utils.py
scripts/: check.py  check.sh  format.py  format.sh  lint.sh  parallel_test.py  publish.sh  test.py  test.sh
tests/: prepare_media.py
tests/cache_is_true/: main.py  test_cache_true.py
tests/cdn_with_default_asset_path/: main.py  media_server.py  test_private_cdn.py  test_private_cdn_with_default_asset_path.py
tests/custom_static_root/: main.py
tests/defined_root_path/: main.py  test_custom_root_path.py  test_root_path.py
tests/explicit_cdn_host/: config.py  main.py  test_explicit_cdn.py
tests/extend_choices/: main.py  test_extend.py
tests/fastcdn_main_dot_py/: conftest.py  main.py  test_fastcdn_main_dot_py.py
tests/fastcdn_offline/: conftest.py  main.py  test_fastcdn_offline.py
tests/favicon_online_cdn/: main.py  test_race_favicon.py
tests/http_race/: main.py  test_http_race.py  utils.py
tests/lock_docs/: main.py  test_lock.py
tests/missing_js/: test_missing_js.py
tests/mount_static/: .gitignore  conftest.py  main.py  test_mount_static.py
tests/no_need_to_patch/: main.py  test_no_openapi_url.py
tests/online_cdn/: main.py  test_online_race.py  test_race.py
tests/private_cdn/: config.py  main.py  media_server.py  test_private_cdn.py
tests/private_cdn_asset_url/: main.py  test_private_cdn_asset_url.py
tests/root_path_without_static/: main.py  test_root_path.py
tests/simple_asset_path/: config.py  main.py  test_simple_asset.py
tests/static_auto/: test_auto_mount.py
tests/static_auto/static/: swagger-ui-bundle.js  swagger-ui-bundle.js.map  swagger-ui.css  swagger-ui.css.map
tests/static_favicon_without_swagger_ui/: main.py  test_favicon.py
tests/static_mounted/: main.py  test_mounted.py
tests/static_with_favicon/: main.py  test_auto_find_favicon.py
tests/static_with_favicon/static/: redoc.standalone.js  swagger-ui-bundle.js  swagger-ui-bundle.js.map  swagger-ui.css  swagger-ui.css.map
tests/sub_app/: main.py  test_mount_sub.py  test_mounted.py
tests/without_api/: conftest.py  test_without_api.py
