[project]
name = "fastapi-cdn-host"
description = "Auto choose the fastest cdn host for fastapi project docs."
authors = [{name="Waket Zheng", email="waketzheng@gmail.com"}]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dynamic = [ "version" ]
dependencies = [
    "fastapi>=0.100",
    "httpx>=0.23",
    "eval-type-backport (>=0.2.2,<0.3.0); python_version < '3.10'",
]

[project.optional-dependencies]
all = ["fastapi-cli>=0.0.6"]

[project.scripts]
fastcdn = "fastapi_cdn_host:cli.main"

[project.urls]
homepage = "https://github.com/waketzheng/fastapi-cdn-host"
repository = "https://github.com/waketzheng/fastapi-cdn-host.git"

[tool.poetry]
version = "0"  # Managed by poetry-plugin-version
requires-poetry = ">=2.0"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

[tool.poetry.group.dev.dependencies]
fastdevcli-slim = {extras=["all"], version="^0.11.6"}
trio = "^0.28.0"
fastapi-cli = "^0.0.6"
pre-commit = "^4.1.0"
asynctor = "^0.6.9"

[build-system]
requires = ["poetry-plugin-version>=0.5"]
build-backend = "poetry_plugin_version.api"

[tool.mypy]
pretty = true
ignore_missing_imports = true
explicit_package_bases = true
check_untyped_defs = true

[tool.ruff.lint]
extend-select = [
    "I",    # isort
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "FA",     # https://docs.astral.sh/ruff/rules/#flake8-future-annotations-fa
    "UP",     # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "RUF100", # https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["E501"]
"examples/main.py" = ["I001"]
"scripts/*test.py" = ["E501", "UP028","UP031"]
"scripts/*.py" = ["UP009","UP032"]

[tool.coverage.run]
branch = true
parallel=true
source = ["fastapi_cdn_host"]
[tool.coverage.report]
omit = ["*/tests/*", "test_*"]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    'if __name__ == "__main__":',
    "if TYPE_CHECKING:",
]

[tool.bandit]
exclude_dirs = ["tests", "fastapi_cdn_host/cli.py", "scripts", "examples"]
