[project]
name = "fastapi-cdn-host"
description = "Auto choose the fastest cdn host for fastapi project docs."
authors = [{name="Waket Zheng", email="waketzheng@gmail.com"}]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dynamic = [ "version" ]
dependencies = [
    "fastapi (>=0.100.0,<1.0.0)",
    "httpx (>=0.23.0,<1.0.0)",
    "eval-type-backport (>=0.2.2,<0.3.0); python_version < '3.10'",
]

[project.optional-dependencies]
all = ["fastapi-cli>=0.0.7"]

[project.scripts]
fastcdn = "fastapi_cdn_host:cli.main"

[project.urls]
homepage = "https://github.com/waketzheng/fastapi-cdn-host"
repository = "https://github.com/waketzheng/fastapi-cdn-host.git"

[tool.poetry]
version = "0"  # Managed by poetry-plugin-version

[tool.poetry.group.dev.dependencies]
fast-dev-cli = "^0.14.0"
bandit = "^1.7.9"
asynctor = "^0.7.0"
trio = "^0.29.0"
pytest-mock = "^3.14.0"
coveralls = { git = "https://github.com/waketzheng/coveralls-python", branch = "master" }

[build-system]
requires = ["poetry-plugin-version"]
build-backend = "poetry_plugin_version.api"

[tool.mypy]
pretty = true
ignore_missing_imports = true
explicit_package_bases = true
check_untyped_defs = true

[tool.ruff.lint]
extend-select = [
    "I",    # isort
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "FA",     # https://docs.astral.sh/ruff/rules/#flake8-future-annotations-fa
    "UP",     # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "RUF100", # https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["E501"]
"examples/main.py" = ["I001"]
"scripts/*test.py" = ["E501", "UP028","UP031"]
"scripts/*.py" = ["UP009","UP032"]

[tool.coverage.run]
branch = true
parallel=true
source = ["fastapi_cdn_host"]
[tool.coverage.report]
omit = ["*/tests/*", "test_*"]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    'if __name__ == "__main__":',
    "if TYPE_CHECKING:",
]

[tool.bandit]
exclude_dirs = ["tests", "fastapi_cdn_host/cli.py", "scripts", "examples"]
