[project]
name = "fastapi-cdn-host"
description = "Auto choose the fastest cdn host for fastapi project docs."
authors = [{name="Waket Zheng", email="waketzheng@gmail.com"}]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dynamic = [ "version" ]
dependencies = [
    "fastapi (>=0.110.0,<1.0.0)",
    "httpx (>=0.23.0,<1.0.0)",
]

[project.optional-dependencies]
cli = ["typer>=0.15.2"]
all = ["fastapi-cli>=0.0.7"]

[project.scripts]
fastcdn = "fastapi_cdn_host:cli.main"

[project.urls]
homepage = "https://github.com/waketzheng/fastapi-cdn-host"
repository = "https://github.com/waketzheng/fastapi-cdn-host.git"

[dependency-groups]
dev = [
    "fastdevcli-slim>=0.19.9",
    "bandit>=1.8.5",
    "asynctor>=0.12.0",
    "trio>=0.29.0",
    "pytest-mock>=3.14.0",
    "flask>=3.1.1",
    "a2wsgi>=1.10.10",
    "loguru>=0.7.3",
    "coverage>=7.13.1",
]
lint = [
    "ruff>=0.14.10",
    "ty>=0.0.9",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.mypy]
pretty = true
ignore_missing_imports = true
explicit_package_bases = true
check_untyped_defs = true

[tool.ruff.lint]
extend-select = [
    "I",    # isort
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "FA",     # https://docs.astral.sh/ruff/rules/#flake8-future-annotations-fa
    "UP",     # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "RUF100", # https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["E501"]
"examples/*/main.py" = ["I001"]
"scripts/*test.py" = ["E501", "UP028","UP031"]
"scripts/*.py" = ["UP009","UP032"]

[tool.coverage.run]
branch = true
parallel=true
source = ["fastapi_cdn_host"]
omit = [
    # omit anything in a .cache directory anywhere
    "*/.cache/*",
    # omit everything in /usr
    "/usr/*",
    # omit this single file
    "scripts/parallel_test.py",
]
[tool.coverage.report]
omit = ["*/tests/*", "test_*"]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    'if __name__ == "__main__":',
    "if TYPE_CHECKING:",
]

[tool.bandit]
exclude_dirs = ["tests", "fastapi_cdn_host/cli.py", "scripts", "examples", ".venv"]

[tool.pdm]
version = { source = "file", path = "fastapi_cdn_host/__init__.py" }
distribution = true

[tool.pdm.build]
source-includes = [
    "scripts/*.py",
]

[tool.pdm.scripts]
pypi = "pdm run python scripts/uv_pypi.py {args}"
deps = "pdm run fast deps {args}"
tree = "pdm list --tree {args}"
